# SmartertAI

./: .cache  .gitignore  CMakeLists.txt  LLM_Template.py  README.md  SmarterAI.py  SpotifyProdCode.py  Text-To-Audio-murfAPI.py  config.py  logger.py  main.cpp  main.py  newSpeachAI.py  playBusyWaitAudio.py  sandBox.py  spotifyAPI.py  spotifyAutomation.py  spotifyConfig.py  spotifyHelperFuncs.py  spotify_command_handler.py  spotify_utils.py
BusyWaitAudio/: Busy Wait Phrases.txt
Documentation/: Spotify Documentation
Legacy Code/: spotifyController.py  spotifyProdCode.py  spotifyTestProg.py
Test Cases/: .cache  test_spotify_utils.py
Tools/: spotifyAutomation.py
